[project]
name = "crew_agent"
version = "0.1.0"
description = "crew_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crew_agent = "crew_agent.main:run"
run_crew = "crew_agent.main:run"
train = "crew_agent.main:train"
replay = "crew_agent.main:replay"
test = "crew_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
